<resources>
    <string name="app_name">Popcorn</string>
    <!-- Menu actions (to be integrated in P2 -->
    <string name="action_settings">Settings</string>

    <!-- Activity titles -->
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Text and label constants, some include test placeholders (like test_release_year) -->
    <string name="text_release_year" translatable="false">2015</string>
    <string name="text_runtime">{runtime}min</string>
    <string name="text_vote_count" translatable="false"> ({votecount})</string>
    <string name="text_overview">No details for this movie. This is a very long line of text to see what happens on the phone</string>
    <string name="text_mpaa_rating">PG13</string>
    <string name="label_remove_fav">- Favorites</string>
    <string name="label_add_fav">+ Favorites</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Reviews</string>
    <!-- Sort order spinner strings -->
    <string name="option_most_popular">Most popular</string>
    <string name="option_highest_rated">Highest rated</string>
    <string name="option_favorites">Favorites</string>
    <!-- Error messages -->
    <string name="error_download_movies_failed">Error downloading movies</string>
    <string name="error_download_movie_failed">Error downloading movie</string>
    <string name="error_implement_method">You must implement method</string>
    <!-- Image contentDescription -->
    <string name="desc_title">Movie title</string>
    <!-- ContentAuthority (to be integrated in P2) -->
    <string name="content_authority" translatable="false">com.nano.movies.app</string>
    <string name="msg_no_trailers">There are no trailers for this movie</string>
    <string name="msg_no_reviews">There are no reviews for this movie</string>
    <string name="msg_trailers_not_available">You must be connected to the network to view trailers</string>
    <string name="msg_reviews_not_available">You must be connected to the network to view reviews</string>
    <string name="title_activity_video_view">View Trailer</string>
    <string name="title_activity_movie_detail_fragment">MovieDetailFragment</string>

    <string name="title_activity_detail_base_fragment">DetailBaseFragment</string>
    <string name="error_retrofit_network_exception">Network exception: </string>
    <string name="error_retrofit_unauthorized_exception">Unauthorized exception:"</string>
    <string name="error_retrofit_unhandled_exception">Unhandled Exception: </string>
    <string name="tab_most_popular">Most Popular</string>
    <string name="tab_highest_rated">Highest Rated</string>
    <string name="tab_favorites">Favorites</string>
    <string name="txt_share">Share</string>
    <string name="txt_vote_count">(1023)</string>
    <string name="txt_genres">Genres</string>
    <string name="txt_play">Play</string>
    <string name="txt_backdrop">Movie Backdrop Image</string>
    <string name="txt_movie_title">Title</string>
</resources>
