<!-- Phone in PORTRAIT -->
<!-- NOTE that MainActivity uses the same layout for its detail pane in
     two-pane mode, but it has to be in a separate file with a unique name,
     so Android doesn't pick up layout-sw600dp-land\detail_card.  That one is
     adapted for DetailActivity to use in Landscape mode). -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rating_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:paddingLeft="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mpaa_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/text_mpaa_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColorSecondary" />

    <TextView
        android:id="@+id/tv_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColorSecondary"
        tools:text="@string/text_runtime" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_release_year"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColorSecondary" />

    <TextView
        android:id="@+id/tv_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_rating_bar"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:text="@string/txt_genres"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/textColorSecondary"></TextView>

    <Button
        android:id="@+id/btn_mark_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawablePadding="0dp"
        android:minHeight="40dp"
        android:minWidth="100dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="-2dp"
        android:text="@string/label_add_fav"
        android:textColor="@android:color/white" />
</LinearLayout>