<!--Basic landscape layout -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin">

    <LinearLayout
        style="@style/Widget.CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Layout for ratings bar, votecount, -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RatingBar
                android:id="@+id/rating_bar_vote_average"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:numStars="10" />

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_vote_count"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/textColorSecondary" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:visibility="visible"
            tools:text="Movie Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/img_thumbnail"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/include_ratings"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_title"
                tools:src="@drawable/no_poster_w185" />

            <include
                android:id="@+id/include_ratings"
                layout="@layout/detail_card_ratings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_thumbnail" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_thumbnail"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textColorSecondary"
            tools:text="@string/text_overview" />
    </LinearLayout>
</android.support.v7.widget.CardView>
